--- a/manifest.json
+++ b/manifest.json
@@ -2,17 +2,18 @@
   "name": "bilibili屏蔽助手",
   "version": "1.0.0",
   "description": "关键词屏蔽b站评论",
-  "permissions":["storage"],
+  "permissions":["storage", "tabs"],
   "background":{
-    "scripts":["background.js"]
+    "scripts":["utils.js", "background.js"]
   },
   "browser_action":{
     "default_popup":"popup.html",
     "default_icon": "bb.png"
   },
+  "options_page": "options.html",
   "content_scripts":[{
     "matches":["<all_urls>"],
-    "js":["content.js"],
+    "js":["utils.js", "content.js"],
     "run_at": "document_start"
   }],
   "icons": {
