--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "bilibili评论区屏蔽工具",
-  "version": "1.0.0",
-  "description": "添加关键词来屏蔽b站评论",
+  "name": "bilibili屏蔽工具",
+  "version": "1.1.0",
+  "description": "对b站主页板块以及评论区进行屏蔽",
   "permissions":["storage", "tabs"],
   "background":{
-    "scripts":["utils.js", "background.js"]
+    "scripts":["background.js"]
   },
   "browser_action":{
     "default_popup":"popup.html",
@@ -19,6 +19,6 @@
   "icons": {
     "48": "icon/logo.png"
   },
-  "homepage_url": "https://github.com/tsluqn/bilibili-comment-filter",
+  "homepage_url": "https://github.com/tsluqn/bilibili-block",
   "manifest_version": 2
 }
