--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,36 @@
 {
-  "name": "bilibili屏蔽工具",
-  "version": "1.1.0",
-  "description": "对b站主页板块以及评论区进行屏蔽",
-  "permissions":["storage", "tabs"],
-  "background":{
-    "scripts":["background.js"]
+  "name": "网页浏览小工具",
+  "version": "2.0.0",
+  "description": "集成对多个网站的小功能",
+  "permissions": [
+    "storage",
+    "tabs",
+    "webRequest",
+    "<all_urls>"
+  ],
+  "background": {
+    "scripts": [
+      "libs/jquery.min.js",
+      "background.js"
+    ]
   },
-  "browser_action":{
-    "default_popup":"popup.html",
+  "browser_action": {
+    "default_popup": "popup.html",
     "default_icon": "icon/logo.png"
   },
   "options_page": "options.html",
-  "content_scripts":[{
-    "matches":["<all_urls>"],
-    "js":["utils.js", "content.js"],
-    "run_at": "document_start"
-  }],
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "libs/jquery.min.js",
+        "content.js"
+      ],
+      "run_at": "document_start"
+    }
+  ],
   "icons": {
     "48": "icon/logo.png"
   },
