--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,22 @@
 {
-  "name": "浏览助手",
-  "version": "1.0.0",
-  "description": "集成多个小功能的浏览助手",
+  "name": "浏览小工具",
+  "version": "1.1.0",
+  "description": "集成多个小功能的浏览小工具",
   "permissions": [
     "storage",
     "tabs",
     "webRequest",
+    "scripting",
+    "activeTab",
+    "downloads"
+  ],
+  "host_permissions": [
     "<all_urls>"
   ],
   "background": {
-    "scripts": [
-      "libs/jquery.min.js",
-      "background.js"
-    ]
+    "service_worker": "background.js"
   },
-  "browser_action": {
+  "action": {
     "default_popup": "popup.html",
     "default_icon": "icon/logo.png"
   },
@@ -27,13 +29,12 @@
       "js": [
         "libs/jquery.min.js",
         "content.js"
-      ],
-      "run_at": "document_start"
+      ]
     }
   ],
   "icons": {
     "48": "icon/logo.png"
   },
-  "homepage_url": "https://github.com/tsluqn/browsing-helper",
-  "manifest_version": 2
+  "homepage_url": "https://github.com/tsluqn/browsing-tool",
+  "manifest_version": 3
 }
